--- a/ClubDeportivoEquipo13/ClubDeportivoEquipo13.csproj
+++ b/ClubDeportivoEquipo13/ClubDeportivoEquipo13.csproj
@@ -106,6 +106,8 @@
     <Compile Include="Dominio\Persona.cs" />
     <Compile Include="Dominio\Socio.cs" />
     <Compile Include="Entidades\E_Persona.cs" />
+    <Compile Include="Enums\AyudanteEnums.cs" />
+    <Compile Include="Enums\Enumeraciones.cs" />
     <Compile Include="Forms\frmCarnetSocio.cs">
       <SubType>Form</SubType>
     </Compile>
