--- a/ClubDeportivoEquipo13/ClubDeportivoEquipo13.csproj
+++ b/ClubDeportivoEquipo13/ClubDeportivoEquipo13.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Datos\ActividadDatos.cs" />
     <Compile Include="Datos\Conexion.cs" />
     <Compile Include="Datos\CuotasDatos.cs" />
     <Compile Include="Datos\PersonasDatos.cs" />
