--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /ClubDeportivoEquipo13/Datos/Conexion.cs
+/ClubDeportivoEquipo13/Datos/Conexion.cs
