La conexion ahora se hace al iniciar el programa, y los datos de conexion son en un unico formulario.

--- a/ClubDeportivoEquipo13/ClubDeportivoEquipo13.csproj
+++ b/ClubDeportivoEquipo13/ClubDeportivoEquipo13.csproj
@@ -99,6 +99,12 @@
     <Compile Include="Datos\ActividadDatos.cs" />
     <Compile Include="Datos\Conexion.cs" />
     <Compile Include="Datos\CuotasDatos.cs" />
+    <Compile Include="Forms\frmConexionDatos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmConexionDatos.Designer.cs">
+      <DependentUpon>frmConexionDatos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Datos\PersonasDatos.cs" />
     <Compile Include="Datos\Usuarios.cs" />
     <Compile Include="Dominio\CuotaDiaria.cs" />
